# archors

./: .gitignore  Cargo.toml  README.md
archors-inventory/: Cargo.toml
archors-inventory/src/: cache.rs  lib.rs  rpc.rs  types.rs
archors-tracer/: Cargo.toml  README.md
archors-tracer/src/: state.rs
archors-verify/: README.md
archors-verify/src/: eip1186.rs  lib.rs  node.rs  proof.rs  utils.rs
crates/interpret/: Cargo.toml  README.md
crates/interpret/src/: context.rs  ether.rs  filter.rs  juncture.rs  lib.rs  opcode.rs  processed.rs
crates/inventory/: Cargo.toml  README.md
crates/inventory/src/: cache.rs  lib.rs  oracle.rs  overlap.rs  rpc.rs  ssz.rs  transferrable.rs  types.rs  utils.rs
crates/multiproof/: Cargo.toml  README.md
crates/multiproof/src/: eip1186.rs  lib.rs  node.rs  oracle.rs  proof.rs
crates/tracer/: Cargo.toml  README.md
crates/tracer/src/: evm.rs  lib.rs  state.rs  trace.rs  utils.rs
crates/types/: Cargo.toml
crates/types/src/: alias.rs  constants.rs  execution.rs  lib.rs  oracle.rs  proof.rs  state.rs  utils.rs
crates/verify/: Cargo.toml
crates/verify/data/: test_proof_2.json
crates/verify/src/: eip1186.rs  node.rs  path.rs  proof.rs
data/: test_proof_1.json  test_proof_3.json
data/blocks/17190873/: block_accessed_state_deduplicated.snappy  block_with_transactions.json  blockhash_opcode_use.json  prior_block_transferrable_state_proofs.ssz_snappy
data/blocks/17193183/: block_accessed_state_deduplicated.json  block_accessed_state_deduplicated.snappy  block_state_proofs.json  block_state_proofs.snappy  block_with_transactions.json  prior_block_state_proofs.snappy  prior_block_transferrable_state_proofs.ssz_snappy
data/blocks/17193270/: block_accessed_state_deduplicated.json  block_accessed_state_deduplicated.snappy  block_with_transactions.json  prior_block_transferrable_state_proofs.ssz_snappy
data/blocks/17640079/: block_accessed_state_deduplicated.json  block_accessed_state_deduplicated.snappy  block_with_transactions.json  blockhash_opcode_use.json  prior_block_state_proofs.snappy  prior_block_transferrable_state_proofs.ssz_snappy
data/blocks/17683184/: block_with_transactions.json  prior_block_transferrable_state_proofs.ssz_snappy
examples/: 00_cache_get_block_by_number.rs  01_cache_trace_block.rs  02_deduplicate_state_accesses.rs  03_compress_state_accesses.rs  04_get_proofs.rs  05_compress_proofs.rs  06_measure_inter_proof_overlap.rs  06_verify_proofs.rs  07_stats.rs  07_use_proof.rs  09_cache_required_state.rs  09_stats.rs  09_update_using_multiproof.rs  09_use_proof.rs  09_use_proof_to_trace.rs  10_cache_required_state.rs  10_use_proof_to_trace.rs  11_interpret_trace.rs  11_post_block_state_root.rs  11_update_using_multiproof.rs  generate_proof.rs  use_proof.rs
spec/: interpreted_trace.md  portal_spec_required_block_state.md  required_block_state.md  required_block_state_format.md  required_block_state_subprotocol.md
src/: cache.rs  eip1186.rs  lib.rs  node.rs  path.rs  proof.rs  rlp.rs  rpc.rs  types.rs  utils.rs
tests/: post_block_state_root.rs
