[package]
name = "archors"
version = "0.1.0"
edition = "2021"
description = "Tool for single Ethereum archival block state proofs"

[workspace]
members = [
    "crates/*",
]

[dependencies]
archors_inventory = { path = "crates/inventory"}
archors_interpret = { path = "crates/interpret"}
archors_tracer = { path = "crates/tracer"}
archors_types = { path = "crates/types"}
archors_verify = { path = "crates/verify"}

[dev-dependencies]
anyhow = "1.0.69"
tokio = { version = "1.26.0", features = ["full"] }
