[package]
name = "archors"
version = "0.1.0"
edition = "2021"
description = "Tools for single Ethereum archival blocks and state proofs"

[workspace]
members = [
    "crates/*",
    "bin/*"
]

[dependencies]
archors_inventory = { path = "crates/inventory"}
archors_tracer = { path = "crates/tracer"}
archors_types = { path = "crates/types"}
archors_verify = { path = "crates/verify"}

[dev-dependencies]
anyhow = "1.0.69"
tokio = { version = "1.26.0", features = ["full"] }
