[package]
name = "archors_inventory"
version = "0.1.0"
edition = "2021"
description = "A tool for discovering which state was accessed for an Ethereum block"

[dependencies]
archors_multiproof= {path = "../multiproof"}
archors_types = {path = "../types"}
archors_verify = { path = "../verify" }
ethers = "2.0.4"
futures = "0.3.28"
hex = "0.4.3"
log = { workspace = true}
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = {  version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
snap = "1.1.0"
ssz_rs = "0.8.0"
ssz_rs_derive = "0.8.0"
thiserror = "1.0.40"
url = "2.3.1"
