[package]
name = "archors_tracer"
version = "0.1.0"
edition = "2021"
description = "Tool for tracing an Ethereum block using state from EIP-1186 proofs"

[dependencies]
archors_types = {path = "../types"}
ethers = "2.0.4"
hex = "0.4.3"
revm = { git = "https://github.com/bluealloy/revm", features = ["serde"]}
serde = {  version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"

[dev-dependencies]
archors_inventory = { path = "../inventory" }
