[package]
name = "archors_verify"
version = "0.1.0"
edition = "2021"
description = "Tool for verifying EIP-1186 proofs"

[dependencies]
ethers = "2.0.4"
hex = "0.4.3"
rlp = "0.5.2"
rlp-derive = "0.1.0"
serde = {  version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
